--- a/package.json
+++ b/package.json
@@ -8,15 +8,13 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "fs": "^0.0.1-security",
-    "node": "^15.3.0",
-    "path": "^0.12.7",
-    "readline": "^1.3.0",
-    "stringify-object": "^3.3.0"
+    "@types/mailparser": "^3.0.0",
+    "mailparser": "^3.0.1",
+    "mbox-reader": "^1.1.5",
+    "node": "^15.3.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.10",
-    "@types/stringify-object": "^3.3.0",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "eslint": "^7.13.0",
