--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
 		"resolveJsonModule": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
+		"noImplicitAny": false,
 		"forceConsistentCasingInFileNames": true
 	},
 	"include": [
