--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mbox-to-json",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Convert Mbox to Json",
   "main": "dist/index.js",
   "repository": "https://github.com/Maastrich/mbox-to-json.git",
@@ -15,6 +15,7 @@
     "node": "^15.3.0"
   },
   "devDependencies": {
+    "@types/humanize-duration": "^3.18.1",
     "@types/node": "^14.14.10",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
