--- a/.gitignore
+++ b/.gitignore
@@ -71,16 +71,14 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
-
 # parcel-bundler cache (https://parceljs.org/)
 .cache
-
 # Next.js build output
 .next
 
 # Nuxt.js build / generate output
 .nuxt
-src
+# src
 
 # Gatsby files
 .cache/
@@ -102,3 +100,8 @@ src
 
 # TernJS port file
 .tern-port
+
+# Local test files
+*.mbox
+*.html
+# dist/*
