--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
   "name": "mbox-to-json",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "Convert Mbox to Json",
   "main": "dist/index.js",
+  "types": "types/index.d.ts",
   "repository": "https://github.com/Maastrich/mbox-to-json.git",
   "author": "Maastrich",
   "license": "MIT",
+  "scripts": {
+    "build:js": "tsc --project ./tsconfig.dist.json",
+    "build:ts": "tsc --project ./tsconfig.types.json",
+    "build": "yarn build:js && yarn build:ts",
+    "test": "ts-node test/index.ts"
+  },
   "private": false,
   "dependencies": {
     "@types/mailparser": "^3.0.0",
+    "humanize-duration": "^3.25.1",
     "mailparser": "^3.0.1",
     "mbox-reader": "^1.1.5",
-    "node": "^15.3.0"
+    "mbox-stream": "^3.0.0",
+    "node": "^15.3.0",
+    "node-mbox": "^1.0.0",
+    "stream-skip": "^1.0.3"
   },
   "devDependencies": {
     "@types/humanize-duration": "^3.18.1",
